Repetition Lektion Git

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <title></title>
   </head>
   <body>
-Hello ich bin Pascal und wer bist du ?  </body>
+    <h1>Wired</h2>
+    <h2>Hard ROck for the Digital Age</h2>
+    <p>an Experimental </p>
+    </body>
 </html>
